2020-01-31 Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Allow non-integer numbers in the "PageSize"
	  option in PPD files. Thanks to Andreas Gruenbacher (agruenba at
	  redhat dot com) for the patch (Pull request #1).

2015-06-16 Till Kamppeter <till.kamppeter@gmail.com>

	* configure.ac: Allow user-configurable PERLPREFIX via environment
	  variable (Bug #1294).

2014-11-14 Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppdfile.in: Foomatic doesn't provide some offered PPD
	  files. Thanks to Marek Kasik for the patch (bug #1238).

2014-08-22 Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in: Let missing XML files be added when to a
	  PPD with already existing XML files new "*Product:" lines get
	  added.

	* lib/Foomatic/filters/xml/to.pm: Silenced warnings about
	  uninitialized strings.

2014-03-20 Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Do not interpret option default values set to
	  "0" in PPD files as no default setting defined. Thanks to Deng
	  Pang from Ricoh (DengPang at rst dot ricoh dot com) for the report.

2014-01-02 Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-addpjloptions.in: Make foomatic-addpjloptions work with
	  the system's Foomatic database, too.

2013-03-11 Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Error out when initializing the DB object
	  without any form of a Foomatic database being present, made
	  the getpage() method a normal, object-independent function as
	  it does not need a Foomatic database.

	* foomatic-configure.in, foomatic-printjob.in: Updated to use
	  getpage() as a normal function, fixed CUPS check, made
	  foomatic-printjob working without presence of a Foomatic
	  database.

2012-02-15 Daniel Dressler <danieru.dressler@gmail.com>

	* lib/Foomatic/filters/sql/from.pm: Finished support for
	  pulling options from the sql database.

	* ChangeLog: Fixed spacing in last five commit comments.
