@@ -1,3 +1,8 @@
+2022-10-24 Yarny0 <41838844+Yarny0@users.noreply.github.com>
+
+	* foomatic-ppdfile.in: Add "export" subcommand
+	  to permit generating many or all ppd files.
+
 2020-01-31 Till Kamppeter <till.kamppeter@gmail.com>
 
 	* lib/Foomatic/DB.pm: Allow non-integer numbers in the "PageSize"
